  - upgrades old school simple poll and navigation modules into 2.0 style controllers
    -- page type indicators now displayed in Manage Pages view
    -- new universal navigation view to emulate most old navigation views through user settings
  - adds help links to most admin displays
  - adds next/prev item in blog and news single item view
  - calendar is more forgiving of timezone changes (events won't disappear)
    -- adds selectable weekly view to calendar
    -- updates ical feeds and send reminders cron task to use sef urls
  - adds new 2-column style display option in forms module
  - updates rss feeds to use sef urls, adds individual feed 'advertise' option
  - more efficient searches...several anomalies fixed and search activity reports available
  - importing EQL database backup files now more descriptive if errors are encountered (detailed solution provided)
  - adds some new upgrade scripts to attempt to clean up the system from previous updates
    -- deletes moved file where old file in old location may still linger
    -- fixes some database issues such as mixed case naming or controller name quirks.
  - new system fallback theme so pages will display even if the entire themes folder is missing
  - plus many other tweaks, fixes, and features

Added / Fixed / changed for 2.0.8
-----------------------
# This release focuses on fixing bugs and enhancing list management (tags, categories, comments)
  - adds manual sorting to news module
  - adds random sorting to links module
  - enhances category management by removing global categories and grouping categories by module type
  - adds site-wide comment management to exponent menu
  - enhances comment, tag, & category management with bulk module item processing
  - adds additional views to photoalbum
    -- new tabbed and accordion views just like filedownloads & portfolio
    -- view category/gallery/group album to pull up individual group/gallery
  - adds group (category) viewing to filedownloads