@@ -41,6 +41,13 @@
     {pagelinks paginate=$page top=1}
     {foreach from=$page->records item=item}
         <div class="item">
+            {if $config.datetag}
+                <p class="post-date">
+                    <span class="month">{$item->publish_date|format_date:"%b"}</span>
+                    <span class="day">{$item->publish_date|format_date:"%e"}</span>
+                    <span class="year">{$item->publish_date|format_date:"%Y"}</span>
+                </p>
+            {/if}
             <h2>
             <a href="{link action=show title=$item->sef_url}" title="{$item->body|summarize:"html":"para"}">
             {$item->title}
@@ -54,7 +61,9 @@
                     {/if}
                     <span class="label posted">{'Posted by'|gettext}</span>
                     <a href="{link action=showall_by_author author=$item->poster|username}">{attribution user_id=$item->poster}</a>
-                    {'on'|gettext} <span class="date">{$item->publish_date|format_date}</span>
+                    {if !$config.datetag}
+                        {'on'|gettext} <span class="date">{$item->publish_date|format_date}</span>
+                    {/if}
                     {if $item->publish_date > $smarty.now}
                         </strong>&#160;
                     {/if}
